tests/values/values.exp
Error ---------------------------------------------------------------------------------------------------- arrays.js:6:3

Cannot cast `x` to empty because `Values` [1] is incompatible with empty [2]. [incompatible-type]

   arrays.js:6:3
   6|   x as empty; // ERROR
        ^

References:
   arrays.js:4:20
   4|   declare const x: Arr;
                         ^^^ [1]
   arrays.js:6:8
   6|   x as empty; // ERROR
             ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- arrays.js:14:3

Cannot cast `x` to empty because `Values` [1] is incompatible with empty [2]. [incompatible-type]

   arrays.js:14:3
   14|   x as empty; // ERROR
         ^

References:
   arrays.js:12:20
   12|   declare const x: ROArr;
                          ^^^^^ [1]
   arrays.js:14:8
   14|   x as empty; // ERROR
              ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- arrays.js:23:3

Cannot cast `x` to empty because at least one member of `Values` [1], e.g. string literal `a` [1], is incompatible with
empty [2]. [incompatible-type]

   arrays.js:23:3
   23|   x as empty; // ERROR
         ^

References:
   arrays.js:21:20
   21|   declare const x: Tup;
                          ^^^ [1]
   arrays.js:23:8
   23|   x as empty; // ERROR
              ^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- classes.js:24:1

Cannot cast `'yo'` to `Values` because string [1] is incompatible with empty [2]. [incompatible-type]

   classes.js:24:1
   24| 'yo' as Values<NoProps>; // Error: There are no properties.
       ^^^^ [1]

References:
   classes.js:24:9
   24| 'yo' as Values<NoProps>; // Error: There are no properties.
               ^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- classes.js:25:1

Cannot cast `123` to `Values` because number [1] is incompatible with empty [2]. [incompatible-type]

   classes.js:25:1
   25| 123 as Values<NoProps>; // Error: There are no properties.
       ^^^ [1]

References:
   classes.js:25:8
   25| 123 as Values<NoProps>; // Error: There are no properties.
              ^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- classes.js:26:2

Cannot cast function to `Values` because function [1] is incompatible with empty [2]. [incompatible-type]

   classes.js:26:2
   26| (() => {}) as Values<NoProps>; // Error: There are no properties.
        ^^^^^^^^ [1]

References:
   classes.js:26:15
   26| (() => {}) as Values<NoProps>; // Error: There are no properties.
                     ^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- classes.js:27:1

Cannot cast `true` to `Values` because boolean [1] is incompatible with empty [2]. [incompatible-type]

   classes.js:27:1
   27| true as Values<NoProps>; // Error: There are no properties.
       ^^^^ [1]

References:
   classes.js:27:9
   27| true as Values<NoProps>; // Error: There are no properties.
               ^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- classes.js:29:1

Cannot cast `'yo'` to `Values` because string [1] is incompatible with empty [2]. [incompatible-type]

   classes.js:29:1
   29| 'yo' as Values<NoReadProps>; // Error: There are no readable properties.
       ^^^^ [1]

References:
   classes.js:29:9
   29| 'yo' as Values<NoReadProps>; // Error: There are no readable properties.
               ^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- classes.js:30:1

Cannot cast `123` to `Values` because number [1] is incompatible with empty [2]. [incompatible-type]

   classes.js:30:1
   30| 123 as Values<NoReadProps>; // Error: There are no readable properties.
       ^^^ [1]

References:
   classes.js:30:8
   30| 123 as Values<NoReadProps>; // Error: There are no readable properties.
              ^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- classes.js:31:2

Cannot cast function to `Values` because function [1] is incompatible with empty [2]. [incompatible-type]

   classes.js:31:2
   31| (() => {}) as Values<NoReadProps>; // Error: There are no readable properties.
        ^^^^^^^^ [1]

References:
   classes.js:31:15
   31| (() => {}) as Values<NoReadProps>; // Error: There are no readable properties.
                     ^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- classes.js:32:1

Cannot cast `true` to `Values` because boolean [1] is incompatible with empty [2]. [incompatible-type]

   classes.js:32:1
   32| true as Values<NoReadProps>; // Error: There are no readable properties.
       ^^^^ [1]

References:
   classes.js:32:9
   32| true as Values<NoReadProps>; // Error: There are no readable properties.
               ^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- classes.js:34:1

Cannot cast `'yo'` to `Values` because string [1] is incompatible with number [2]. [incompatible-type]

   classes.js:34:1
   34| 'yo' as Values<OneProp>; // Error: There is no property with the type of
       ^^^^ [1]

References:
   classes.js:8:6
    8|   a: number;
            ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- classes.js:37:2

Cannot cast function to `Values` because function [1] is incompatible with number [2]. [incompatible-type]

   classes.js:37:2
   37| (() => {}) as Values<OneProp>; // Error: Even though there is a method, methods
        ^^^^^^^^ [1]

References:
   classes.js:8:6
    8|   a: number;
            ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- classes.js:39:1

Cannot cast `true` to `Values` because boolean [1] is incompatible with number [2]. [incompatible-type]

   classes.js:39:1
   39| true as Values<OneProp>; // Error: There is no property with the type of
       ^^^^ [1]

References:
   classes.js:8:6
    8|   a: number;
            ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- classes.js:44:2

Cannot cast function to `Values` because: [incompatible-type]
 - Either function [1] is incompatible with number [2].
 - Or function [1] is incompatible with string [3].
 - Or function [1] is incompatible with string [4].

   classes.js:44:2
   44| (() => {}) as Values<SomeProps>; // Error: Even though there is a method,
        ^^^^^^^^ [1]

References:
   classes.js:14:6
   14|   a: number;
            ^^^^^^ [2]
   classes.js:15:6
   15|   b: string;
            ^^^^^^ [3]
   classes.js:16:6
   16|   c: string;
            ^^^^^^ [4]


Error -------------------------------------------------------------------------------------------------- classes.js:46:1

Cannot cast `true` to `Values` because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with string [3].
 - Or boolean [1] is incompatible with string [4].

   classes.js:46:1
   46| true as Values<SomeProps>; // Error: There is no property with the type of
       ^^^^ [1]

References:
   classes.js:14:6
   14|   a: number;
            ^^^^^^ [2]
   classes.js:15:6
   15|   b: string;
            ^^^^^^ [3]
   classes.js:16:6
   16|   c: string;
            ^^^^^^ [4]


Error -------------------------------------------------------------------------------------------------- classes.js:49:1

Cannot cast `'yo'` to `Values` because string [1] is incompatible with number [2]. [incompatible-type]

   classes.js:49:1
   49| 'yo' as Values<Child>; // TODO: This should be ok since there is a property
       ^^^^ [1]

References:
   classes.js:22:33
   22| class Child extends Parent { b: number; }
                                       ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- classes.js:52:2

Cannot cast function to `Values` because function [1] is incompatible with number [2]. [incompatible-type]

   classes.js:52:2
   52| (() => {}) as Values<Child>; // Error: There is no property with the type of
        ^^^^^^^^ [1]

References:
   classes.js:22:33
   22| class Child extends Parent { b: number; }
                                       ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- classes.js:54:1

Cannot cast `true` to `Values` because boolean [1] is incompatible with number [2]. [incompatible-type]

   classes.js:54:1
   54| true as Values<Child>; // Error: There is no property with the type of boolean.
       ^^^^ [1]

References:
   classes.js:22:33
   22| class Child extends Parent { b: number; }
                                       ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ non_object.js:1:9

boolean [1] is not an object. [not-an-object]

   non_object.js:1:9
   1| 'yo' as Values<boolean>; // Error: `boolean` is not an object and so has no
              ^^^^^^^^^^^^^^^

References:
   non_object.js:1:16
   1| 'yo' as Values<boolean>; // Error: `boolean` is not an object and so has no
                     ^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ non_object.js:3:8

boolean [1] is not an object. [not-an-object]

   non_object.js:3:8
   3| 123 as Values<boolean>; // Error: `boolean` is not an object and so has no
             ^^^^^^^^^^^^^^^

References:
   non_object.js:3:15
   3| 123 as Values<boolean>; // Error: `boolean` is not an object and so has no
                    ^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ non_object.js:5:9

boolean [1] is not an object. [not-an-object]

   non_object.js:5:9
   5| true as Values<boolean>; // Error: `boolean` is not an object and so has no
              ^^^^^^^^^^^^^^^

References:
   non_object.js:5:16
   5| true as Values<boolean>; // Error: `boolean` is not an object and so has no
                     ^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- object_types.js:4:1

Cannot cast `123` to `NoProps` because number [1] is incompatible with empty [2]. [incompatible-type]

   object_types.js:4:1
   4| 123 as NoProps; // Error: There are no props.
      ^^^ [1]

References:
   object_types.js:4:8
   4| 123 as NoProps; // Error: There are no props.
             ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- object_types.js:5:1

Cannot cast `345` to `NoReadProps` because number [1] is incompatible with empty [2]. [incompatible-type]

   object_types.js:5:1
   5| 345 as NoReadProps; // Error: There are no props which can be read.
      ^^^ [1]

References:
   object_types.js:5:8
   5| 345 as NoReadProps; // Error: There are no props which can be read.
             ^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- object_types.js:9:1

Cannot cast `123` to `OneProp` because number [1] is incompatible with string [2]. [incompatible-type]

   object_types.js:9:1
   9| 123 as OneProp; // Error: There is no property with the type of number.
      ^^^ [1]

References:
   object_types.js:9:8
   9| 123 as OneProp; // Error: There is no property with the type of number.
             ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- object_types.js:10:1

Cannot cast `true` to `OneProp` because boolean [1] is incompatible with string [2]. [incompatible-type]

   object_types.js:10:1
   10| true as OneProp; // Error: There is no property with the type of boolean.
       ^^^^ [1]

References:
   object_types.js:10:9
   10| true as OneProp; // Error: There is no property with the type of boolean.
               ^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_types.js:12:16

Cannot cast `null` to number because string [1] is incompatible with number [2]. [incompatible-type]

   object_types.js:12:16
   12| null as any as OneProp as number; // Error: There is no string in the final
                      ^^^^^^^ [1]

References:
   object_types.js:12:27
   12| null as any as OneProp as number; // Error: There is no string in the final
                                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- object_types.js:18:1

Cannot cast `true` to `ManyProps` because: [incompatible-type]
 - Either boolean [1] is incompatible with string [2].
 - Or boolean [1] is incompatible with string [3].
 - Or boolean [1] is incompatible with number [4].

   object_types.js:18:1
   18| true as ManyProps; // Error: There is no property with the type of boolean.
       ^^^^ [1]

References:
   object_types.js:15:30
   15| type ManyProps = Values<{ a: string, b: string, c: number }>;
                                    ^^^^^^ [2]
   object_types.js:15:41
   15| type ManyProps = Values<{ a: string, b: string, c: number }>;
                                               ^^^^^^ [3]
   object_types.js:15:52
   15| type ManyProps = Values<{ a: string, b: string, c: number }>;
                                                          ^^^^^^ [4]


Error -------------------------------------------------------------------------------------------- object_types.js:21:16

Cannot cast `null` to union type because: [incompatible-type]
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with boolean [3].

   object_types.js:21:16
   21| null as any as ManyProps as string | boolean; // Error: There is no number in
                      ^^^^^^^^^ [1]

References:
   object_types.js:21:29
   21| null as any as ManyProps as string | boolean; // Error: There is no number in
                                   ^^^^^^ [2]
   object_types.js:21:38
   21| null as any as ManyProps as string | boolean; // Error: There is no number in
                                            ^^^^^^^ [3]


Error --------------------------------------------------------------------------------------------- object_types.js:25:1

Cannot cast `'yo'` to `DictProps` because: [incompatible-type]
 - Either string [1] is incompatible with boolean [2].
 - Or string [1] is incompatible with number [3].

   object_types.js:25:1
   25| 'yo' as DictProps; // Error: There is no property with the type of string.
       ^^^^ [1]

References:
   object_types.js:24:30
   24| type DictProps = Values<{ a: boolean, [key: string]: number }>;
                                    ^^^^^^^ [2]
   object_types.js:24:54
   24| type DictProps = Values<{ a: boolean, [key: string]: number }>;
                                                            ^^^^^^ [3]


Error -------------------------------------------------------------------------------------------- object_types.js:30:16

Cannot cast `null` to union type because: [incompatible-type]
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with boolean [3].

   object_types.js:30:16
   30| null as any as DictProps as string | boolean; // Error: There is no number in
                      ^^^^^^^^^ [1]

References:
   object_types.js:30:29
   30| null as any as DictProps as string | boolean; // Error: There is no number in
                                   ^^^^^^ [2]
   object_types.js:30:38
   30| null as any as DictProps as string | boolean; // Error: There is no number in
                                            ^^^^^^^ [3]


Error --------------------------------------------------------------------------------------------- object_types.js:38:1

Cannot cast `true` to `Values` because: [incompatible-type]
 - Either boolean [1] is incompatible with string [2].
 - Or boolean [1] is incompatible with number [3].

   object_types.js:38:1
   38| true as Values<CallableProp>; // Error: There is no property with the type of
       ^^^^ [1]

References:
   object_types.js:33:29
   33| interface CallableProp { a: string; b: number; (): boolean }
                                   ^^^^^^ [2]
   object_types.js:33:40
   33| interface CallableProp { a: string; b: number; (): boolean }
                                              ^^^^^^ [3]


Error --------------------------------------------------------------------------------------------- object_types.js:41:2

Cannot cast function to `Values` because: [incompatible-type]
 - Either function [1] is incompatible with string [2].
 - Or function [1] is incompatible with number [3].

   object_types.js:41:2
   41| (() => true) as Values<CallableProp>; // Error: There is no property with a
        ^^^^^^^^^^ [1]

References:
   object_types.js:33:29
   33| interface CallableProp { a: string; b: number; (): boolean }
                                   ^^^^^^ [2]
   object_types.js:33:40
   33| interface CallableProp { a: string; b: number; (): boolean }
                                              ^^^^^^ [3]


Error --------------------------------------------------------------------------------------------- object_types.js:69:1

Cannot cast `'DIAMONDS'` to `SuiteEnum` because string literal `DIAMONDS` [1] is incompatible with `Values` [2].
[incompatible-type]

   object_types.js:69:1
   69| 'DIAMONDS' as SuiteEnum; // Error: 'DIAMONDS' is a key, but not a value.
       ^^^^^^^^^^ [1]

References:
   object_types.js:69:15
   69| 'DIAMONDS' as SuiteEnum; // Error: 'DIAMONDS' is a key, but not a value.
                     ^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- object_types.js:70:1

Cannot cast `'Magic'` to `SuiteEnum` because string literal `Magic` [1] is incompatible with `Values` [2].
[incompatible-type]

   object_types.js:70:1
   70| 'Magic' as SuiteEnum; // Error: 'Magic' is not a value.
       ^^^^^^^ [1]

References:
   object_types.js:70:12
   70| 'Magic' as SuiteEnum; // Error: 'Magic' is not a value.
                  ^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_types.js:71:15

Cannot cast `'Diamonds'` to `SuiteEnum` because string [1] is incompatible with `Values` [2]. [incompatible-type]

   object_types.js:71:15
   71| 'Diamonds' as string as SuiteEnum; // Error: the `string` type is to general and
                     ^^^^^^ [1]

References:
   object_types.js:71:25
   71| 'Diamonds' as string as SuiteEnum; // Error: the `string` type is to general and
                               ^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_types.js:77:12

Cannot call `magicTrick` with `'DIAMONDS'` bound to `suite` because string literal `DIAMONDS` [1] is incompatible with
`Values` [2]. [incompatible-type]

   object_types.js:77:12
   77| magicTrick('DIAMONDS'); // Error: 'DIAMONDS' is a key, but not a value.
                  ^^^^^^^^^^ [1]

References:
   object_types.js:62:28
   62| function magicTrick(suite: SuiteEnum) {
                                  ^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_types.js:78:12

Cannot call `magicTrick` with `'Magic'` bound to `suite` because string literal `Magic` [1] is incompatible with
`Values` [2]. [incompatible-type]

   object_types.js:78:12
   78| magicTrick('Magic'); // Error: 'Magic' is not a value.
                  ^^^^^^^ [1]

References:
   object_types.js:62:28
   62| function magicTrick(suite: SuiteEnum) {
                                  ^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_types.js:79:26

Cannot call `magicTrick` with `'Diamonds'` bound to `suite` because string [1] is incompatible with `Values` [2].
[incompatible-type]

   object_types.js:79:26
   79| magicTrick('Diamonds' as string); // Error: the `string` type is to general and
                                ^^^^^^ [1]

References:
   object_types.js:62:28
   62| function magicTrick(suite: SuiteEnum) {
                                  ^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- object_types.js:93:1

Cannot cast `'DIAMONDS'` to `FrozenSuiteEnum` because string literal `DIAMONDS` [1] is incompatible with `Values` [2].
[incompatible-type]

   object_types.js:93:1
   93| 'DIAMONDS' as FrozenSuiteEnum; // Error: 'DIAMONDS' is a key, but not a value.
       ^^^^^^^^^^ [1]

References:
   object_types.js:93:15
   93| 'DIAMONDS' as FrozenSuiteEnum; // Error: 'DIAMONDS' is a key, but not a value.
                     ^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- object_types.js:94:1

Cannot cast `'Magic'` to `FrozenSuiteEnum` because string literal `Magic` [1] is incompatible with `Values` [2].
[incompatible-type]

   object_types.js:94:1
   94| 'Magic' as FrozenSuiteEnum; // Error: 'Magic' is not a value.
       ^^^^^^^ [1]

References:
   object_types.js:94:12
   94| 'Magic' as FrozenSuiteEnum; // Error: 'Magic' is not a value.
                  ^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_types.js:95:15

Cannot cast `'Diamonds'` to `FrozenSuiteEnum` because string [1] is incompatible with `Values` [2]. [incompatible-type]

   object_types.js:95:15
   95| 'Diamonds' as string as FrozenSuiteEnum; // Error: `string` is too general
                     ^^^^^^ [1]

References:
   object_types.js:95:25
   95| 'Diamonds' as string as FrozenSuiteEnum; // Error: `string` is too general
                               ^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_types.js:105:1

Cannot cast `1` to `NumbersEnum` because number [1] is incompatible with `Values` [2]. [incompatible-type]

   object_types.js:105:1
   105| 1 as NumbersEnum; // error, NumbersEnum = -1 | 2
        ^ [1]

References:
   object_types.js:105:6
   105| 1 as NumbersEnum; // error, NumbersEnum = -1 | 2
             ^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_types.js:120:1

Cannot cast `'s'` to `Values` because string [1] is incompatible with number literal `1` [2]. [incompatible-type]

   object_types.js:120:1
   120| 's' as Values<IfaceWithDict>; // ERROR
        ^^^ [1]

References:
   object_types.js:108:13
   108|   [string]: 1;
                    ^ [2]


Error -------------------------------------------------------------------------------------------- object_types.js:121:1

Cannot cast `1` to `Values` because number [1] is incompatible with empty [2]. [incompatible-type]

   object_types.js:121:1
   121| 1 as Values<IfaceWithWriteOnlyDict>; // ERROR
        ^ [1]

References:
   object_types.js:121:6
   121| 1 as Values<IfaceWithWriteOnlyDict>; // ERROR
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_types.js:124:1

Cannot cast `'s'` to `Values` because string literal `s` [1] is incompatible with `Values` [2]. [incompatible-type]

   object_types.js:124:1
   124| 's' as Values<IfaceWithDictAndProps>; // ERROR
        ^^^ [1]

References:
   object_types.js:124:8
   124| 's' as Values<IfaceWithDictAndProps>; // ERROR
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- object_types.js:125:2

Cannot cast function to `Values` because function [1] is incompatible with `Values` [2]. [incompatible-type]

   object_types.js:125:2
   125| (() => {}) as Values<IfaceWithDictAndProps>; // ERROR
         ^^^^^^^^ [1]

References:
   object_types.js:125:15
   125| (() => {}) as Values<IfaceWithDictAndProps>; // ERROR
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]



Found 47 errors
